--- a/TODO
+++ b/TODO
@@ -24,8 +24,10 @@ autorotation:
 - dot/regen server tick tracking
 - brd
 -- aoe rotation (2/3/4+ targets, barrage usage)
+-- take traits into account (ij proccing rs, ea proccing repertoire)
 - drg
--- l90
+-- priorities...
+-- dragon sight is a true north
 -- cd planning
 - war
 -- simulate gauge changes (message can arrive few frames after ActionEffect...)
