Waymarks are now read from memory rather than network.

--- a/TODO
+++ b/TODO
@@ -1,4 +1,5 @@
 general:
+- get rid of dependency on network
 - optionally log raw ipcs when recording, visualize in replay analysis
 - simulate autorotation in replay analysis
 - live replay
@@ -11,7 +12,6 @@ general:
 - bozja action support
 - better timing tracking for: statuses, gauges, cooldowns, cast times, anim lock, ...
 - constrain bossmodules to zone id (e.g. for T04)
-- waymarks from game state rather than network
 
 boss modules:
 - wipe should not fast forward all phases
