--- a/TODO
+++ b/TODO
@@ -1,6 +1,13 @@
+network rework:
+- get rid of network parsing for events
+- build opcode mapping
+- better intercept function (know size)
+- intermediate solution: log to file, like now
+- optionally log raw ipcs to replay
+- visualize in replay analysis, dump to file
+- utility to inject custom ipcs to the stream for debugging?
+
 general:
-- get rid of dependency on network
-- optionally log raw ipcs when recording, visualize in replay analysis
 - simulate autorotation in replay analysis
 - live replay
 -- checkbox - record ops to temp struct
