--- a/TODO
+++ b/TODO
@@ -1,8 +1,9 @@
 autorotation rework:
+- bozja holster / action support
+-- anim lock reduction
 - priority action suggestions
 - control panel w/ presets and bindings
 - module registry supporting alternatives per job
-- bozja holster / action support
 - proper lb support
 - proper gcd time calculations
 - simulation in replay analysis
@@ -29,10 +30,6 @@ boss modules:
 - boss module config presets/profiles
 
 autorotation:
-- don't fire 2mins on few % trash before boss...
--- separate button?
--- also don't re-dot?
--- while shift is held?
 - dot/regen server tick tracking
 - brd
 -- aoe rotation (2/3/4+ targets, barrage usage)
