--- a/TODO
+++ b/TODO
@@ -16,6 +16,7 @@ network rework:
 - utility to inject custom ipcs to the stream for debugging?
 
 general:
+- knockback/forced movement projected actor - along line rather than from center
 - autoreplay improvements - react to module manager transitions?
 - better timing tracking for: statuses, gauges, cooldowns, cast times, anim lock, ...
 - constrain bossmodules to zone id (e.g. for T04)
