--- a/TODO
+++ b/TODO
@@ -1,8 +1,3 @@
-components refactor checklist
-- config should all use primary ctor
-- bitmasks in record structs!
-- reverify primary ctors for components, add base class args if needed
-
 autorotation rework:
 - priority action suggestions
 - control panel w/ presets and bindings
@@ -21,6 +16,7 @@ network rework:
 - utility to inject custom ipcs to the stream for debugging?
 
 general:
+- verify use of bitmasks in properties (eg in record structs)
 - knockback/forced movement projected actor - along line rather than from center
 - autoreplay improvements - react to module manager transitions?
 - better timing tracking for: statuses, gauges, cooldowns, cast times, anim lock, ...
