TODO list update.

--- a/TODO
+++ b/TODO
@@ -1,16 +1,17 @@
 autorotation v2:
+- revise planner
+- move action tweaks configs + converter
+- console command to start autorotation
+- worldstate: animlock, gauge parser
+- simulator!
+- action transforms?..
 - Autorotation.cs
 -- not tied to game - convert to rotationmodulemanager basically
--- move useaction hook to AMEx
--- manual queue should be managed by a plugin / framework
--- move hints above? ie to be filled by framework right after WS/BMM update
 -- manage ui and active modules
--- calcnextaction logic to combine manual queue, hints and rotation modules
 - CommonActions.cs
 -- just a base class for rotation modules
 -- move rotation expire logic to autorotation?
 --- maybe need to split into manager + manual layers?
--- 
 
 
 autorotation rework:
