--- a/TODO
+++ b/TODO
@@ -1,9 +1,18 @@
 autorotation v2:
+- auto start/end logic
+-- on countdown start => plan (should be automatic), or user-configured default preset
+-- on countdown end, if not in combat => abort
+-- on combat start, if countdown above threshold => abort (ninjapull)
+-- on combat start, otherwise => n/a (continue)
+-- on combat start, if inactive (no countdown) => n/a (stay idle, ninjapull or smth...)
+-- on combat end => abort
+-- timeout => move to idle
+-- die => ??? abort probably...
+-- introduce 'force disabled' state (after abort, until combat ends + countdown is inactive, prevents any autorotation running)
 - revise planner
 - move action tweaks configs + converter
 - console command to start autorotation
-- worldstate: animlock, gauge parser
-- simulator!
+- worldstate: animlock, combo, gauge parser
 - action transforms?..
 - Autorotation.cs
 -- not tied to game - convert to rotationmodulemanager basically
@@ -23,8 +32,6 @@ autorotation rework:
 - simulation in replay analysis
 - cooldowns
 -- get rid of cdgroup enums
--- properly support additional cdgroups
--- remove fake cdgroup 71 (lb/holster)
 
 general:
 - refactor window system to dispose stuff properly and avoid CS1806 and `_ = new...` pattern
