--- a/TODO
+++ b/TODO
@@ -4,11 +4,6 @@ autorotation v2:
 -- autorotation
 -- per-class
 -- plans
-- questlock on actiondefinition level
--- minlevel
--- optional unlock provider functor
--- autoqueue should check during push
--- remove unlock stuff
 - actiondefinitions
 -- sid generator
 -- spell out shared cooldowns in comments instead of group?
@@ -35,6 +30,7 @@ post-wip:
 - actiondefinitions
 -- action transforms?.. (combos, adjustment)
 -- adjusted casttime/cooldown/maxcharges/???
+-- compare defs vs actual state in analysis
 - ai features
 -- legacy ai rotation modules (auto stance, interrupt, taunt, etc)
 -- target selection should be part of a module/preset
