--- a/TODO
+++ b/TODO
@@ -26,12 +26,12 @@ post-wip:
 -- legacy ai rotation modules (auto stance, interrupt, taunt, etc)
 -- target selection should be part of a module/preset
 -- ai manager should use selected preset for combat, out of combat use forcedtarget
-- color scheme
 - action history/queue visualization
 - proper gcd time calculations?
 - simulation in replay analysis
 
 general:
+- consistently use Color instead of uint
 - horizontal timeline / cooldown planner
 - refactor window system to dispose stuff properly and avoid CS1806 and `_ = new...` pattern
 - diagnostic to detect readonly mutable collections
