--- a/TODO
+++ b/TODO
@@ -1,6 +1,6 @@
 autorotation v2:
+- strategy/option builders
 - resurrect legacy modules
-- delete/rework commonstate
 - delete autorotationlegacy dir
 post-wip:
 - worldstate: animlock, combo, gauge parser, camera
@@ -18,6 +18,7 @@ post-wip:
 - proper gcd time calculations?
 - simulation in replay analysis
 - spell out shared cooldowns in actiondefinitions comments instead of group?
+- delete/rework commonstate/legacy
 
 general:
 - proper logging
