--- a/TODO
+++ b/TODO
@@ -94,3 +94,22 @@ notes on targeting:
 - aoe (e.g. cone) will hit if shape intersects target's hitbox; for players it is == 0.5
 - max melee range is raw range (usually 3) + source hitbox radius + target hitbox radius; for players this usually means 3.5 + target hitbox
 - charge/onslaught will bring player to source hitbox radius + target hitbox radius range, or leave in place if current distance is less
+
+getAjustedRecastTime:
+- type: item => calculation, non-spell => 5000, spell => continue...
+- no adjustment or cdgroup is [76-79] -> recast100ms * 100; otherwise start with that and adjust...
+- trait adjustment: recastMS += 100 * trait->Value (per trait)
+- if maxcharges > 1 => return recast (adjusted by additive traits)
+- recastMS = adjustRecastTimeByStatusesAndStats(recastMS)
+-- if non pvp:
+--- weaponskill/spell:
+---- spdMod = 1000 + 130 * (base - spdattr) / levelmod (min 0)
+---- recastMS *= spdMod / 1000
+---- recastMS *= hasteattr / 100
+---- min 1500
+--- if gcd and have sm flag 18: recastMS += recastMS * sum-status-param(22) / 100; min 500 (ie riddle of fire)
+-- else: tbd...
+- some special pvp checks -> fallback to raw base
+- MCH if have rapid fire (853) status -> override to 100*param
+- DNC overrides
+- etc special overrides
