--- a/TODO
+++ b/TODO
@@ -7,23 +7,6 @@ immediate plans
 - horizontal timeline
 - pet place
 
-autorotation v2 cleanup:
-- preset/plan editors should properly react to external changes
-- ipc for autorotation
-- actiondefinitions
--- action transforms?.. (combos, adjustment)
--- adjusted casttime/cooldown/???
-- ai features
--- legacy ai rotation modules (auto stance, interrupt, taunt, etc)
--- target selection should be part of a module/preset
--- ai manager should use selected preset for combat, out of combat use forcedtarget
-- action history/queue visualization
-- proper gcd time calculations?
-- simulation in replay analysis
-- spell out shared cooldowns in actiondefinitions comments instead of group?
-- delete/rework commonstate/legacy
-- delete autorotationlegacy dir
-
 general:
 - module packs
 -- dlls, loaded as usual
@@ -61,6 +44,22 @@ boss modules:
 - boss module config presets/profiles
 
 autorotation:
+- global strategy for track
+- bulk override priorities?
+- preset/plan editors should properly react to external changes
+- actiondefinitions
+-- action transforms?.. (combos, adjustment)
+-- adjusted casttime/cooldown/???
+- ai features
+-- legacy ai rotation modules (auto stance, interrupt, taunt, etc)
+-- target selection should be part of a module/preset
+-- ai manager should use selected preset for combat, out of combat use forcedtarget
+- action history/queue visualization
+- proper gcd time calculations?
+- simulation in replay analysis
+- spell out shared cooldowns in actiondefinitions comments instead of group?
+- delete/rework commonstate/legacy
+- delete autorotationlegacy dir
 - dot/regen server tick tracking
 - brd
 -- aoe rotation (2/3/4+ targets, barrage usage)
