--- a/TODO
+++ b/TODO
@@ -3,7 +3,6 @@ immediate plans
 - m2s ai/plan
 - mrd support
 - horizontal timeline / cooldown planner
-- pet place
 
 general:
 - module packs
@@ -31,6 +30,7 @@ general:
 --- target can be damaged but it won't contribute to fight progress or log (various pointless adds)
 --- target is not a priority, but damaging it is a nice bonus (lower priority than max target)
 -- use that for targeting utils in aihints
+- debug utility to play action animations, spawn actors, play vfx, etc...
 
 boss modules:
 - timers
