--- a/TODO
+++ b/TODO
@@ -1,9 +1,11 @@
 immediate plans
 - drs review & update plans, fix br rotation
 - m2s ai/plan
-- horizontal timeline / cooldown planner
+- cdplanner should use real cds
+- auto avoid gaze
 
 general:
+- horizontal timeline / cooldown planner
 - module packs
 -- dlls, loaded as usual
 -- hotreload - just discard old version and load new one
