--- a/TODO
+++ b/TODO
@@ -1,5 +1,9 @@
 immediate plans
-- m2s ai/plan
+- auto control
+- collisions for pathfinding
+- uwu targets & review
+- hunt modules
+- brd rotation
 
 general:
 - horizontal timeline / cooldown planner
