TODO list update

--- a/TODO
+++ b/TODO
@@ -1,7 +1,7 @@
 immediate plans
 - auto control
+- goal priority for aoes
 - collisions for pathfinding
-- uwu targets & review
 - hunt modules
 - brd rotation
 
