--- a/TODO
+++ b/TODO
@@ -1,8 +1,12 @@
 immediate plans
+- fate modules
+- m1s mouser bug
+- war no target actions
+- merge prs!
+- downtime etc hints at phase start
 - auto control
 - goal priority for aoes
 - collisions for pathfinding
-- hunt modules
 - brd rotation
 
 general:
