--- a/TODO
+++ b/TODO
@@ -1,5 +1,5 @@
 immediate plans
-- fate modules
+- no autopeloton during countdown
 - war no target actions
 - merge prs!
 - downtime etc hints at phase start
