--- a/TODO
+++ b/TODO
@@ -1,8 +1,8 @@
 immediate plans
 - merge prs!
-- auto control
 - collisions for pathfinding
 - brd rotation
+- handle boss reset (outdoor)
 
 general:
 - horizontal timeline / cooldown planner
