--- a/TODO
+++ b/TODO
@@ -1,8 +1,13 @@
 immediate plans
-- nechuciho - seen incorrect rotations...
-- questbattles
-- collisions for pathfinding
--- embedded mode
+- new dungeon
+- misdirection
+- freeze
+- rotation modules in preset/plan to be ordered (incl ui)
+- get rid of legacyxxx
+- ex3 p2 ice bridges
+- on ex1 the cleave is still telegraphed a bit too wide
+- for p2 thordan cleavebuster the telegraph on the minimap is narrower than the actual hitbox
+- alt style for player indicator on arena
 
 general:
 - horizontal timeline / cooldown planner
@@ -39,12 +44,20 @@ general:
 - zone modules: replay visualization
 - zone modules: module info ui
 - refactor ipc/dtr
+- nechuciho - seen incorrect rotations...
+- questbattles
+- collisions for pathfinding
+-- embedded mode
 
 boss modules:
 - timers
 - wipe should not fast forward all phases
 - fail log
 - boss module config presets/profiles
+- jeuno
+-- a11: mechanic repeats
+-- a12: concrete postures, dragon breath disappearing, hw2+
+-- a13 / a14: repeats?.. rare
 
 autorotation:
 - global strategy for track
