--- a/TODO
+++ b/TODO
@@ -1,6 +1,5 @@
 immediate plans
 - new dungeon
-- misdirection
 - freeze
 - rotation modules in preset/plan to be ordered (incl ui)
 - get rid of legacyxxx
@@ -55,9 +54,16 @@ boss modules:
 - fail log
 - boss module config presets/profiles
 - jeuno
--- a11: mechanic repeats
--- a12: concrete postures, dragon breath disappearing, hw2+
--- a13 / a14: repeats?.. rare
+-- a11:
+--- mechanic repeats
+--- ai hints for spikes+uppercut
+-- a12:
+--- concrete postures
+--- dragon breath disappearing
+--- hw2+
+-- a14:
+--- complex aoe hints (cthonic, battlements)
+--- dark nebula kb hints
 
 autorotation:
 - global strategy for track
