A bunch of fixes.
- better misdirection for AI movement (always active, and adjust cone to avoid steering into walls)
- spread target now tries to spread from everyone else
- reworked movement override logic a bit again
- more detailed custom bounds
- fixed rotation direction

--- a/TODO
+++ b/TODO
@@ -1,5 +1,5 @@
 immediate plans
-- new dungeon
+- nechuciho - more omen statuses
 - freeze
 - rotation modules in preset/plan to be ordered (incl ui)
 - get rid of legacyxxx
@@ -43,7 +43,6 @@ general:
 - zone modules: replay visualization
 - zone modules: module info ui
 - refactor ipc/dtr
-- nechuciho - seen incorrect rotations...
 - questbattles
 - collisions for pathfinding
 -- embedded mode
@@ -54,6 +53,7 @@ boss modules:
 - fail log
 - boss module config presets/profiles
 - jeuno
+-- review recent logs
 -- a11:
 --- mechanic repeats
 --- ai hints for spikes+uppercut
