--- a/TODO
+++ b/TODO
@@ -54,9 +54,7 @@ boss modules:
 - boss module config presets/profiles
 - jeuno
 -- review recent logs
--- a11:
---- mechanic repeats
---- ai hints for spikes+uppercut
+-- a11: ai hints for spikes+uppercut
 -- a12:
 --- concrete postures
 --- dragon breath disappearing
