--- a/TODO
+++ b/TODO
@@ -53,15 +53,9 @@ boss modules:
 - fail log
 - boss module config presets/profiles
 - jeuno
--- review recent logs
 -- a11: ai hints for spikes+uppercut
--- a12:
---- concrete postures
---- dragon breath disappearing
---- hw2+
--- a14:
---- complex aoe hints (cthonic, battlements)
---- dark nebula kb hints
+-- a14: complex aoe hints (cthonic, battlements)
+-- a14: dark nebula kb hints
 
 autorotation:
 - global strategy for track
