--- a/TODO
+++ b/TODO
@@ -1,15 +1,6 @@
 immediate plans
 - circle vs rect/cone intersection
-- fru
--- banish 2 ai
--- proper circle bounds -> revise everything
--- p1 fall of faith presets for hhttmmrr / hrmttmrh
--- mirror 1 hints for ranged
--- ur laser circle hint on top of baits
--- apoc revise default prio for healers
--- p4 crystal hitbox
--- ct revise visual pos hints for eruptions
--- ct revise visual pos hints for rewind
+- proper circle bounds -> revise everything in fru
 - ai refactoring
 -- high-level ai modules
 --- ordered before standard rotation modules
@@ -35,6 +26,8 @@ immediate plans
 - ishape
 
 general:
+- pending effects
+-- there's no effectresult for attract if it won't move (within mindistance)
 - horizontal timeline / cooldown planner
 - cdplanner should use real cds
 - assignments per ui order rather than per player + class-specific assignments
