--- a/TODO
+++ b/TODO
@@ -15,6 +15,13 @@ immediate plans
 --- tracks like destination (pathfind / explicit abs orient / explicit target orient) and adjustment (direct / maxmelee greed / uptime-downtime based on gcd / force-finish-cast / ...)
 -- framework (actionqueue getbest) should skip spells that won't finish in time
 -- order should be a module-specified enum and framework should enforce ordering constraints
+-- features checklist:
+--- idle / follow self / follow other distinction [_followMaster]
+--- afk mode?
+--- nav decision delay
+--- target selection
+--- maxcast based on leeway
+--- special modes (gaze/pyretic/misdirection)
 - review enemy prios usage - should framework do anything about any prios? like taunt at -4...
 - freeze
 - gaze avoidance + forced movement fail
