--- a/TODO
+++ b/TODO
@@ -1,11 +1,13 @@
 immediate plans
-- get rid of legacyxxx
+- get rid of legacyxxx (waiting for net9)
+- better autopeloton
 - ai refactoring
+-- misdirection pathfinding
+-- order should be a module-specified enum and framework should enforce ordering constraints
 -- high-level ai modules
 --- ordered before standard rotation modules
 --- responsible for tweaking forced-target and enemy priorities
 --- correspond to high-level decisions (eg fate mob grinding, follow master, etc)
---- hardcoded force-target track from plans goes here
 -- standard/utility rotation modules
 --- responsible for filling actions (for casters - both casted and instant option, with casted higher prio), goal zones and positionals
 --- can expect priorities to be set to ultimate values, should use them for decisions
@@ -13,15 +15,6 @@ immediate plans
 --- ordered after rotation modules
 --- responsible for setting forced-movement (using pathfinding or other strategies) and max-cast-hint (based on leeway)
 --- tracks like destination (pathfind / explicit abs orient / explicit target orient) and adjustment (direct / maxmelee greed / uptime-downtime based on gcd / force-finish-cast / ...)
--- framework (actionqueue getbest) should skip spells that won't finish in time
--- order should be a module-specified enum and framework should enforce ordering constraints
--- features checklist:
---- idle / follow self / follow other distinction [_followMaster]
---- afk mode?
---- nav decision delay
---- target selection
---- maxcast based on leeway
---- special modes (gaze/pyretic/misdirection)
 - review enemy prios usage - should framework do anything about any prios? like taunt at -4...
 - freeze
 - gaze avoidance + forced movement fail
@@ -31,8 +24,6 @@ immediate plans
 - ishape
 
 general:
-- pending effects
--- there's no effectresult for attract if it won't move (within mindistance)
 - horizontal timeline / cooldown planner
 - cdplanner should use real cds
 - assignments per ui order rather than per player + class-specific assignments
@@ -64,6 +55,14 @@ general:
 - alt style for player indicator on arena
 - MAO for pomanders holsters etc
 - ManualActionQueueTweak.Push should not special case gcds?..
+
+ai:
+- nav decision delay
+- review TODO[cast-time]
+- knockbacks, forced movement, pyretic/freezing, etc components should update max-cast hint
+- hardcoded cdplanner targeting track should be moved to a aimodule
+- utility modules / planner - how should planned casts work?
+- high-level follow/assist module for multibox
 
 boss modules:
 - timers
