--- a/TODO
+++ b/TODO
@@ -4,7 +4,9 @@ immediate plans
 - add strategy param, use for 'apply unless already active' flavours of utility strategies
 - ishape
 -- rasterization should automatically deal with 0.03 position imprecision (and angle imprecision?..)
-- custom queueing for manually-pressed actions should allow native autotarget
+
+- component to apply priority -1 to bosses below an HP threshold
+- update rotations to go into build-gauge mode on priority -1 bosses
 
 general:
 - horizontal timeline / cooldown planner
